# blockworld

./: .gitignore  Cargo.toml  LICENSE  README.md
blockworld-client/: Cargo.toml  README.md  a.cpp  build.rs  camera.rs  draw.rs  main.rs  texture.rs  vertex.rs  window_init.rs
blockworld-client/assets/: readme.md
blockworld-client/block/: block.rs  mod.rs
blockworld-client/game/: README.md  block.rs  chunk.rs  chunk_provider.rs  client.rs  console_instr.rs  input_manager.rs  key_record.rs  mod.rs  player_state.rs  register.rs  save.rs  settings.rs  world.rs
blockworld-client/io/: atlas_helper.rs  input_helper.rs  mod.rs  nbt.rs
blockworld-client/render/: camera.rs  draw.rs  game_loop.rs  mod.rs  pipeline.rs  render_array.rs  render_block.rs  render_chunk.rs  render_chunk_pool.rs  render_system.rs  texture.rs  uniform.rs  vertex.rs  window_init.rs
blockworld-client/render/shaders/: debug_shader.wgsl  default_shader.wgsl
blockworld-client/renderer/: README.md  atlas_image.rs  bytes_provider.rs  camera.rs  init_helpers.rs  input_manager.rs  mod.rs  pipeline.rs  render_state.rs  resource_manager.rs  resource_provider.rs  sprite_contents.rs  texture.rs  texture_atlas_sprite.rs  uniform.rs  vertex.rs  window_init.rs  world_renderer.rs
blockworld-client/renderer/block/: mod.rs
blockworld-client/renderer/chunk/: mod.rs  render_chunk.rs  render_chunk_array.rs
blockworld-client/renderer/entity/: mod.rs
blockworld-client/renderer/meshing/: block_meshing.rs  meshing_manager.rs  mod.rs  render_chunk.rs
blockworld-client/renderer/shaders/: default_shader.wgsl  mod.rs  wireframe_shader.wgsl
blockworld-client/renderer/vertex/: mod.rs  vertex.rs
blockworld-client/renderer/wgpu/: init_helpers.rs  mod.rs  pipeline.rs  render_state.rs  texture.rs  uniform.rs  window_init.rs
blockworld-client/resources/: mod.rs
blockworld-client/shaders/: default_shader.wgsl
blockworld-client/src/: camera.rs  game.rs  instance.rs  lib.rs  main.rs  render.rs  renderer.rs  shader.wgsl  texture.rs  vertex.rs
blockworld-client/src/game/: block.rs  chunk.rs  register.rs
blockworld-client/src/render/: camera.rs  instance.rs  resource.rs  shader.wgsl  state.rs  texture.rs  vertex.rs
blockworld-client/tileentity/: mod.rs
blockworld-client/world/: block_access.rs  chunk.rs  chunk_array.rs  chunk_provider.rs  mod.rs  world.rs
blockworld-server/: Cargo.toml
blockworld-server/src/: lib.rs  packet.rs
blockworld-server/src/block/: block.rs  block_face_direction.rs  mod.rs
blockworld-server/src/components/: mod.rs
(+40 files in other folders)
