[package]
name = "blockworld-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
bytemuck = { version = "1.15.0", features = ["derive"] }
env_logger = "0.11.3"
glam = "0.27.0"
image = "0.25.1"
lazy_static = "1.4.0"
log = "0.4.21"
ndarray = "0.15.6"
pollster = "0.3.0"
wgpu = "0.20.0"
winit = "0.30.0"

[[bin]]
name = "blockworld-client"
path = "main.rs"


[lints.rust]
unused = "allow"
