[package]
name = "blockworld-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockworld-utils = { path = "../blockworld-utils" }

anyhow = "1.0.83"
bytemuck = { version = "1.15.0", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
glam = "0.29.0"
glyphon = "0.5.0"
image = "0.25.1"
inline_tweak = "1.1.1"
lazy_static = "1.4.0"
log = "0.4.21"
maplit = "1.0.2"
pollster = "0.3.0"
serde = { version = "1.0.202", features = ["derive", "serde_derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = "1.37.0"
wgpu = "0.20.0"
winit = "0.30.0"
slab = "0.4.9"
once_cell = "1.19.0"
bimap = "0.6.3"
enumflags2 = "0.7.10"
bevy_ecs = "0.14.1"

[[bin]]
name = "blockworld-client"
path = "main.rs"


# [lints.rust]
# unused = "allow"
