[package]
name = "blockworld-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
bevy_ecs = "0.15.0"
blockworld-utils = { path = "../blockworld-utils" }
futures-util = "0.3.30"
glam = "0.29.2"
log = "0.4.22"
once_cell = "1.20.2"
petgraph = "0.6.5"
slab = "0.4.9"
tokio = "1.37.0"
tokio-tungstenite = "0.21.0"
enumflags2 = "0.7"
